--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mongodb": "^4.5.0",
+    "mongoose": "^6.3.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.16"
   }
 }
