--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.4"
   },
